--- a/app/src/main/res/layout/apiaries_act.xml
+++ b/app/src/main/res/layout/apiaries_act.xml
@@ -39,7 +39,7 @@
                 android:layout_height="match_parent"/>
 
             <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_add_task"
+                android:id="@+id/fab_add_apiary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/fab_margin"
