--- a/app/src/main/res/layout/apiary_item.xml
+++ b/app/src/main/res/layout/apiary_item.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/ic_home"/>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
