--- a/app/src/main/res/layout/apiaries_frag.xml
+++ b/app/src/main/res/layout/apiaries_frag.xml
@@ -19,10 +19,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/apiaries_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <LinearLayout
