--- a/app/src/main/res/layout/hives_frag.xml
+++ b/app/src/main/res/layout/hives_frag.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
-    android:id="@+id/refresh_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/apiariesContainer"
+        android:id="@+id/hivesContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackground"
         android:clickable="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/colorBackground">
 
         <LinearLayout
-            android:id="@+id/apiariesLL"
+            android:id="@+id/hivesLL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/apiaries_list"
+                android:id="@+id/hives_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/no_apiaries"
+            android:id="@+id/no_hives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/no_apiaries_icon"
+                android:id="@+id/no_hives_icon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
@@ -44,7 +44,7 @@
                 android:src="@drawable/ic_add_circle_outline"/>
 
             <TextView
-                android:id="@+id/no_apiaries_text"
+                android:id="@+id/no_hives_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -52,7 +52,7 @@
                 android:text="@string/no_apiaries"/>
 
             <TextView
-                android:id="@+id/no_apiaries_add"
+                android:id="@+id/no_hives_add"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
