--- a/app/src/main/res/layout/apiaries_list_item.xml
+++ b/app/src/main/res/layout/apiaries_list_item.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="116dp"
     android:layout_marginBottom="16dp"
+    android:foreground="?attr/selectableItemBackground"
     android:paddingBottom="24dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -36,12 +37,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginEnd="24dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="4dp"
             android:layout_toEndOf="@id/apiary_image"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/colorPrimaryText"
-            android:layout_marginEnd="24dp"/>
+            android:textColor="@color/colorPrimaryText"/>
 
         <ImageView
             android:id="@+id/more_icon"
