--- a/app/src/main/res/layout/apiary_act.xml
+++ b/app/src/main/res/layout/apiary_act.xml
@@ -6,7 +6,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".hives.HivesActivity">
+              tools:context=".apiary.ApiaryActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
