--- a/app/src/main/res/layout/apiary_act.xml
+++ b/app/src/main/res/layout/apiary_act.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/white" />
+                android:background="@color/colorBackground" />
 
         </FrameLayout>
 
