--- a/app/src/main/res/layout/apiary_hives_frag.xml
+++ b/app/src/main/res/layout/apiary_hives_frag.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/refresh_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
-        android:orientation="vertical"
-        android:background="@color/colorBackground">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/hivesLL"
