--- a/app/src/main/res/layout/hive_recordings_list_item.xml
+++ b/app/src/main/res/layout/hive_recordings_list_item.xml
@@ -4,30 +4,61 @@
     android:id="@+id/card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="116dp"
-    android:layout_marginBottom="16dp"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingBottom="24dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="24dp">
+    android:layout_height="120dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:foreground="?attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/date_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp"
+            android:adjustViewBounds="false"
+            android:contentDescription="@string/date_icon"
+            android:src="@drawable/ic_event"
+            android:tint="@color/colorAccent"/>
 
         <TextView
             android:id="@+id/recording_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="4dp"
-            android:text="Dom 28 Ago, 2016"
+            android:layout_toEndOf="@id/date_icon"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
+
+        <ImageView
+            android:id="@+id/more_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:adjustViewBounds="false"
+            android:contentDescription="@string/more_icon"
+            android:src="@drawable/ic_more_vert"
+            android:tint="@color/colorIcons"/>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_below="@id/recording_date"/>
 
     </RelativeLayout>
 
