--- a/app/src/main/res/layout/apiary_hives_list_item.xml
+++ b/app/src/main/res/layout/apiary_hives_list_item.xml
@@ -5,26 +5,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="116dp"
-    android:layout_marginBottom="16dp"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingBottom="24dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="24dp">
+    android:layout_height="112dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="16dp"
+    android:foreground="?attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="match_parent">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/hive_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
             android:src="@drawable/hive"
             app:riv_border_color="@android:color/black"
@@ -37,10 +35,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:layout_toEndOf="@id/hive_image"
+            android:layout_toStartOf="@+id/more_icon"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
 
@@ -50,7 +49,8 @@
             android:layout_height="24dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
             android:adjustViewBounds="false"
             android:contentDescription="@string/more_icon"
             android:src="@drawable/ic_more_vert"
@@ -59,10 +59,10 @@
         <ImageView
             android:id="@+id/last_revision_icon"
             android:layout_width="20dp"
-            android:layout_height="24dp"
+            android:layout_height="20dp"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
             android:layout_toEndOf="@id/hive_image"
             android:adjustViewBounds="false"
             android:contentDescription="@string/last_revision_icon"
@@ -74,10 +74,12 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/last_revision_icon"
+            android:layout_toStartOf="@+id/enter_icon"
             android:gravity="bottom"
-            android:paddingBottom="2dp"
             android:text="10 days ago"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorSecondaryText"/>
@@ -89,6 +91,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
             android:adjustViewBounds="false"
             android:contentDescription="@string/enter_icon"
             android:src="@drawable/ic_chevron_right"
