--- a/app/src/main/res/layout/apiary_hives_list_item.xml
+++ b/app/src/main/res/layout/apiary_hives_list_item.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/hive"
+            android:src="@drawable/hive_land"
             app:riv_border_color="@android:color/black"
             app:riv_border_width="0dp"
             app:riv_corner_radius="50dp"
