--- a/app/src/main/res/layout/hive_recordings_frag.xml
+++ b/app/src/main/res/layout/hive_recordings_frag.xml
@@ -36,12 +36,12 @@
 
             <ImageView
                 android:id="@+id/no_recordings_icon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center"
                 android:adjustViewBounds="false"
-                android:contentDescription="@string/add_icon"
-                android:src="@drawable/ic_add_circle_outline"/>
+                android:contentDescription="@string/gobees_logo"
+                android:src="@drawable/gobees_bee"/>
 
             <TextView
                 android:id="@+id/no_recordings_text"
@@ -49,16 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/list_item_padding"
-                android:text="@string/no_apiaries"/>
-
-            <TextView
-                android:id="@+id/no_recordings_add"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_gravity="center"
-                android:background="@drawable/touch_feedback"
-                android:gravity="center"
-                android:text="@string/no_apiaries_add"/>
+                android:text="@string/no_recordings"/>
 
         </LinearLayout>
     </RelativeLayout>
