--- a/app/src/main/res/layout/hive_recordings_list_item.xml
+++ b/app/src/main/res/layout/hive_recordings_list_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/card"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="128dp"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="16dp"
@@ -56,6 +56,7 @@
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             android:layout_below="@id/recording_date"/>
 
     </RelativeLayout>
