--- a/app/src/main/res/layout/apiaries_list_item.xml
+++ b/app/src/main/res/layout/apiaries_list_item.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/apiary"
+            android:src="@drawable/apiary_land"
             app:riv_border_color="@android:color/black"
             app:riv_border_width="0dp"
             app:riv_corner_radius="50dp"
