--- a/app/src/main/res/layout/recording_frag.xml
+++ b/app/src/main/res/layout/recording_frag.xml
@@ -1,17 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin">
+<com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
+    android:id="@+id/refresh_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/recording_chart"
+    <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <android.support.v7.widget.CardView
+            android:id="@+id/card"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/recording_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="3"/>
+
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/temp_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="32dp"/>
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/rain_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="32dp"/>
+
+                    <com.github.mikephil.charting.charts.LineChart
+                        android:id="@+id/wind_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="32dp"/>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/line_icon"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginStart="16dp"
+                            android:adjustViewBounds="false"
+                            android:contentDescription="@string/chart_line"
+                            android:src="@drawable/ic_show_chart"
+                            android:tint="@color/colorAccent"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_toEndOf="@id/line_icon"
+                            android:layout_toStartOf="@+id/temp_icon"
+                            android:text="@string/num_bees"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+
+                        <ImageView
+                            android:id="@+id/wind_icon"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginEnd="16dp"
+                            android:adjustViewBounds="false"
+                            android:contentDescription="@string/wind"
+                            android:src="@drawable/ic_wind"
+                            android:tint="@color/colorWindIcon"/>
+
+                        <ImageView
+                            android:id="@+id/rain_icon"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginEnd="16dp"
+                            android:layout_toStartOf="@id/wind_icon"
+                            android:adjustViewBounds="false"
+                            android:contentDescription="@string/rain"
+                            android:src="@drawable/ic_rain"
+                            android:tint="@color/colorRainIcon"/>
+
+                        <ImageView
+                            android:id="@+id/temp_icon"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginEnd="12dp"
+                            android:layout_toStartOf="@id/rain_icon"
+                            android:adjustViewBounds="false"
+                            android:contentDescription="@string/temperature"
+                            android:src="@drawable/ic_temperature"
+                            android:tint="@color/colorTempIcon"/>
+
+                    </RelativeLayout>
+
+                </FrameLayout>
+
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout>
