--- a/app/src/main/res/layout/addeditapiary_frag.xml
+++ b/app/src/main/res/layout/addeditapiary_frag.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/apiary_name_hint"
+            android:inputType="textCapWords"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
@@ -29,14 +30,15 @@
                 android:id="@+id/add_apiary_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/location_icon"
+                android:layout_toStartOf="@+id/get_location_icon"
+                android:cursorVisible="false"
+                android:focusable="false"
                 android:hint="@string/apiary_location_hint"
                 android:inputType="none"
-                android:maxLines="1"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                android:maxLines="1"/>
 
             <ImageView
-                android:id="@+id/location_icon"
+                android:id="@+id/get_location_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
@@ -54,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:gravity="top"
-            android:hint="@string/apiary_notes_hint"/>
+            android:hint="@string/apiary_notes_hint"
+            android:inputType="textCapSentences"/>
 
     </LinearLayout>
 </ScrollView>
