--- a/app/src/main/res/layout/monitoring_frag.xml
+++ b/app/src/main/res/layout/monitoring_frag.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.davidmiguel.gobees.premonitoring.PreMonitoringActivity">
+    tools:context="com.davidmiguel.gobees.monitoring.MonitoringActivity">
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/camera_view"
