Add monitoring view and settings #89

--- a/app/src/main/res/layout/monitoring_frag.xml
+++ b/app/src/main/res/layout/monitoring_frag.xml
@@ -13,14 +13,85 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         opencv:camera_id="any"
-        opencv:show_fps="true"/>
+        opencv:show_fps="false"/>
 
-    <TextView
-        android:id="@+id/num_bees"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/num_bees"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"/>
+
+        <LinearLayout
+            android:layout_width="88dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorCameraControlsBg"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/settings_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp"
+                    android:adjustViewBounds="false"
+                    android:contentDescription="@string/more_icon"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_settings"
+                    android:tint="@color/colorCameraControlsIcons"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/record_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="88dp"
+                    android:adjustViewBounds="false"
+                    android:contentDescription="@string/more_icon"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_fiber_manual_record"
+                    android:tint="@color/colorCameraControlsIcons"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/switch_off_screen_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp"
+                    android:adjustViewBounds="false"
+                    android:contentDescription="@string/more_icon"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_power_settings_new"
+                    android:tint="@color/colorCameraControlsIcons"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
 
 </FrameLayout>
