--- a/app/src/main/res/layout/monitoring_frag.xml
+++ b/app/src/main/res/layout/monitoring_frag.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context="com.davidmiguel.gobees.monitoring.MonitoringActivity">
 
-    <org.opencv.android.JavaCameraView
+    <com.davidmiguel.gobees.monitoring.CameraView
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
