--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="colorCameraControlsIcons">#ffffff</color>
     <color name="colorCameraSettingsBg">#80000000</color>
     <color name="colorCameraSettingsFrameBg">#ffffff</color>
+    <color name="colorRecordIcon">#d50000</color>
 
     <drawable name="touchFeedback">#CFD8DC</drawable>
 </resources>
