--- a/app/src/main/res/layout/apiaries_list_item.xml
+++ b/app/src/main/res/layout/apiaries_list_item.xml
@@ -78,6 +78,7 @@
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/hive_icon"
             android:gravity="bottom"
+            android:text="@string/default_num_hives"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorSecondaryText"/>
 
@@ -92,7 +93,8 @@
             android:adjustViewBounds="false"
             android:contentDescription="@string/weather_icon"
             android:src="@drawable/ic_filter_drama"
-            android:tint="@color/colorSecondaryText"/>
+            android:tint="@color/colorSecondaryText"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/temp"
@@ -103,9 +105,9 @@
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/weather_icon"
             android:gravity="bottom"
-            android:text="10ºC"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@color/colorSecondaryText"/>
+            android:textColor="@color/colorSecondaryText"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/enter_icon"
