--- a/app/src/main/res/layout/addeditapiary_frag.xml
+++ b/app/src/main/res/layout/addeditapiary_frag.xml
@@ -45,7 +45,7 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:adjustViewBounds="false"
-                android:contentDescription="@string/date_icon"
+                android:contentDescription="@string/gps_location_icon"
                 android:src="@drawable/ic_my_location"
                 android:tint="@color/colorAccent"/>
 
