--- a/app/src/main/res/drawable-anydpi/ic_enter.xml
+++ b/app/src/main/res/drawable-anydpi/ic_enter.xml
@@ -5,5 +5,5 @@
         android:viewportWidth="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M13,7h-2v4L7,11v2h4v4h2v-4h4v-2h-4L13,7zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z"/>
+        android:pathData="M10,6L8.59,7.41 13.17,12l-4.58,4.59L10,18l6,-6z"/>
 </vector>
