--- a/app/src/main/res/layout/addedithive_act.xml
+++ b/app/src/main/res/layout/addedithive_act.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/ic_done"
             app:fabSize="normal"
             app:layout_anchor="@id/contentFrame"
             app:layout_anchorGravity="bottom|right|end"/>
