--- a/app/src/main/res/layout/apiaries_list_item.xml
+++ b/app/src/main/res/layout/apiaries_list_item.xml
@@ -121,7 +121,7 @@
             android:layout_marginEnd="8dp"
             android:adjustViewBounds="false"
             android:contentDescription="@string/enter_icon"
-            android:src="@drawable/ic_chevron_right"
+            android:src="@drawable/ic_enter"
             android:tint="@color/colorAccent"/>
 
     </RelativeLayout>
