--- a/app/src/main/res/layout/recording_bees_marker_vew.xml
+++ b/app/src/main/res/layout/recording_bees_marker_vew.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:background="@drawable/marker">
+                android:background="@drawable/chart_marker">
 
     <TextView
         android:id="@+id/tvContent"
