--- a/app/src/main/res/layout/addedithive_frag.xml
+++ b/app/src/main/res/layout/addedithive_frag.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hive_name_hint"
+            android:inputType="textCapWords"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
@@ -26,7 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:gravity="top"
-            android:hint="@string/hive_notes_hint"/>
+            android:hint="@string/hive_notes_hint"
+            android:inputType="textCapSentences"/>
 
     </LinearLayout>
 </ScrollView>
