--- a/app/src/main/res/layout/apiary_hives_list_item.xml
+++ b/app/src/main/res/layout/apiary_hives_list_item.xml
@@ -40,6 +40,9 @@
             android:layout_marginTop="24dp"
             android:layout_toEndOf="@id/hive_image"
             android:layout_toStartOf="@+id/more_icon"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@string/default_hive_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
 
@@ -79,8 +82,10 @@
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/last_revision_icon"
             android:layout_toStartOf="@+id/enter_icon"
+            android:ellipsize="end"
             android:gravity="bottom"
-            android:text="10 days ago"
+            android:maxLines="1"
+            android:text="@string/default_last_revision"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorSecondaryText"/>
 
