--- a/app/src/main/res/layout/hive_recordings_list_item.xml
+++ b/app/src/main/res/layout/hive_recordings_list_item.xml
@@ -35,7 +35,10 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:text="@string/default_recording_date"
             android:layout_toEndOf="@id/date_icon"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
 
@@ -56,8 +59,8 @@
             android:id="@+id/chart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_below="@id/recording_date"/>
+            android:layout_below="@id/recording_date"
+            android:layout_marginTop="8dp"/>
 
     </RelativeLayout>
 
